# 2DGameEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/engine/: main.cpp
src/engine/components/: AmbientLightComponent.ixx  BoxCollision.ixx  CameraComponent.ixx  ColorComponent.ixx  Common.cpp  Component.ixx  DiffuseLightComponent.ixx  IComponent.ixx  InputComponent.ixx  MeshComponent.ixx  ModelComponent.ixx  MovementComponent.ixx  PlayerComponent.ixx  PointLightComponent.ixx  TextureComponent.ixx  TransformComponent.ixx
src/engine/components/includes/components/: BoxCollision.hpp  CameraComponent.hpp  ColorComponent.hpp  Common.hpp  IComponent.hpp  InputComponent.hpp  MeshComponent.hpp  MovementComponent.hpp  PlayerComponent.hpp  TextureComponent.hpp  TransformComponent.hpp  TranslationComponent.hpp
src/engine/core/: Core.ixx  IdGenerator.cpp  IdGenerator.ixx
src/engine/core/includes/core/: IdGenerator.hpp  core.hpp
src/engine/core/modules/: Core.ixx  IdGenerator.ixx
src/engine/ecs/: ComponentStore.ixx  Ecs.ixx  EntityManager.cpp  EntityManager.ixx  ISystem.ixx  IdGenerator.cpp  SystemManager.cpp  SystemManager.ixx
src/engine/ecs/includes/ecs/: ComponentStore.hpp  Entity.hpp  EntityManager.hpp  IComponentStore.hpp  ISystem.hpp  SystemManager.hpp
src/engine/ecs/modules/: ComponentStore.ixx  Entity.ixx  EntityManager.ixx  IComponent.ixx  IComponentStore.ixx  SystemManager.ixx
src/engine/entity_component/: Actor.cpp  Component.cpp  EntityManager.cpp  IdGenerator.cpp
src/engine/entity_component/includes/entity_component/: Actor.hpp  Component.hpp  ComponentStore.hpp  ComponentType.hpp  Entity.hpp  EntityManager.hpp  IComponentStore.hpp  IdGenerator.hpp
src/engine/graphics/: Camera.cpp  Common.cpp  Graphics.cpp  Graphics.ixx  IndexBuffer.cpp  IndexBuffer.ixx  Mesh.cpp  Mesh.ixx  MeshImpl.ixx  Model.cpp  Model.ixx  ResourceManager.cpp  ResourceManager.ixx  ResourceManagerImpl.ixx  Shader.cpp  Shader.ixx  Texture2D.cpp  Texture2D.ixx  VertexArray.cpp  VertexArray.ixx  VertexBuffer.cpp  VertexBuffer.ixx  VertexBufferLayout.cpp  VertexBufferLayout.ixx
src/engine/graphics/includes/: Graphics.hpp  IndexBuffer.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/engine/graphics/includes/graphics/: Camera.hpp  Common.hpp  Graphics.hpp  IndexBuffer.hpp  Shader.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/engine/graphics/modules/: Graphics.ixx  IndexBuffer.ixx  Mesh.ixx  Model.ixx  Resource.ixx  ResourceManager.ixx  Shader.ixx  Texture2D.ixx  VertexArray.ixx  VertexBuffer.ixx  VertexBufferLayout.ixx
src/engine/input/: Input.cpp
src/engine/input/includes/input/: Input.hpp
src/engine/object/: Actor.cpp  Object.cpp  ObjectManager.cpp
src/engine/object/includes/object/: Actor.hpp  Object.hpp  ObjectManager.hpp
src/engine/renderable/: BaseMesh.cpp  Plane2D.cpp  Renderable.cpp  RenderableManager.cpp
src/engine/renderable/includes/renderable/: BaseMesh.hpp  Plane2D.hpp  Renderable.hpp  RenderableManager.hpp
src/engine/shaders/: Mesh.frag  Mesh.vert  Plane2DColored.frag  Plane2DColored.vert  Plane2DTextured.frag  basic.frag  basic.vert
src/engine/system/: SystemManager.cpp
src/engine/system/includes/system/: ISystem.hpp  SystemManager.hpp
src/engine/systems/: CameraSystem.cpp  CameraSystem.ixx  CollisionSystem.cpp  CollisionSystem.ixx  Common.cpp  InputSystem.cpp  InputSystem.ixx  MeshSystem.cpp  MeshSystem.ixx  MovementSystem.cpp  MovementSystem.ixx  PlayerSystem.cpp  PlayerSystem.ixx  System.ixx  TestSystem.cpp  TestSystem.ixx
src/engine/systems/includes/systems/: CameraSystem.hpp  CollisionSystem.hpp  Common.hpp  InputSystem.hpp  MeshSystem.hpp  MovementSystem.hpp  PlayerSystem.hpp  TestSystem.hpp
src/engine/systems/modules/: CameraSystem.ixx  CollisionSystem.ixx  InputSystem.ixx  MeshSystem.ixx  MovementSystem.ixx  PlayerSystem.ixx  System.ixx  TestSystem.ixx
